--- a/src/index.css
+++ b/src/index.css
@@ -143,7 +143,7 @@ body{
 
   /* Services */
   .service-card{
-    @apply shadow-black/30 shadow-md bg-gradient-to-b from-fuchsia-100 to-fuchsia-300 transition-colors duration-[0.3s] hover:bg-gradient-to-b hover:from-fuchsia-600 hover:to-fuchsia-400 h-60 rounded-2xl p-2
+    @apply shadow-black/30 shadow-md bg-gradient-to-b from-fuchsia-100 to-fuchsia-300 transition-colors duration-[0.3s] hover:bg-gradient-to-b hover:from-fuchsia-600 hover:to-fuchsia-400 rounded-2xl p-2
   }
   /* Services */
 
