services carousel details

--- a/src/index.css
+++ b/src/index.css
@@ -145,6 +145,15 @@ body{
   .service-card{
     @apply shadow-black/30 shadow-md bg-gradient-to-b from-fuchsia-100 to-fuchsia-300 transition-colors duration-[0.3s] hover:bg-gradient-to-b hover:from-fuchsia-600 hover:to-fuchsia-400 rounded-2xl p-2
   }
+  .carousel-container{
+    @apply relative overflow-y-hidden
+  }
+  .carousel-container:hover > .carousel-details{
+    @apply translate-y-0
+  }
+  .carousel-details{
+    @apply absolute top-0 left-0 p-3 bg-pink-700/50 h-full translate-y-[100%] transition-transform duration-200 ease-in
+  }
   /* Services */
 
   /* utilities */
