--- a/src/index.css
+++ b/src/index.css
@@ -152,7 +152,7 @@ body{
     @apply translate-y-0
   }
   .carousel-details{
-    @apply absolute top-0 left-0 p-3 bg-pink-700/50 h-full translate-y-[100%] transition-transform duration-200 ease-in
+    @apply absolute top-0 left-0 p-3 bg-fuchsia-600/70 h-full text-white translate-y-[100%] transition-transform duration-200 ease-in
   }
   /* Services */
 
