--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,11 @@
   -webkit-box-reflect: below 0.5em
     linear-gradient(rgb(0 0 0 / 0), rgb(0 0 0 / 0.25));
 }
-.visi-bg-img {
+/* .visi-bg-img {
   background: url("assets/hero_image.png");
   background-size: cover;
   background-position: center;
-}
+} */
 @keyframes fadeIn {
     from{opacity: 0}
     to{opacity: 1}
@@ -117,6 +117,9 @@ body{
   }
   .hero-paragraph{
     @apply w-xl text-xl py-6 max-sm:w-auto max-sm:text-sm max-sm:py-3;
+  }
+  .visi-bg-img {
+    @apply bg-[url(./assets/hero_image.png)] max-sm:bg-[url(./assets/mobile-bg.jpg)] bg-cover bg-center;
   }
   /* Hero */
 
